css spacing fixes

--- a/styles/main-style.css
+++ b/styles/main-style.css
@@ -1,3 +1,10 @@
+main {
+    display: flex;
+    flex-flow: column nowrap;
+    gap: 1em;
+    padding-bottom: 2em;
+}
+
 .numbers-section {
     width: 80%;
     margin: 0 auto;
@@ -37,3 +44,5 @@
         justify-content: center;
     }
 }
+
+/* End of numbers section */
